--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TripMate - Everything your trip needs in one box</title>
-    <meta name="description" content="TripMate takes care of the planning, coordination, and chaos — so you can focus on the fun. Join the waitlist for early access." />
-    <meta name="author" content="TripMate" />
+    <title>TravelKaro - Everything your trip needs in one box</title>
+    <meta name="description" content="TravelKaro takes care of the planning, coordination, and chaos — so you can focus on the fun. Join the waitlist for early access." />
+    <meta name="author" content="TravelKaro" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="tripmate-all-in-one" />
+    <meta property="og:title" content="TravelKaro - Everything your trip needs in one box" />
     <meta property="og:description" content="Lovable Generated Project" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
